Updated ScopedPreferenceStore to latest version in Eclipse Platform