@@ -1,17 +1,23 @@
 /*******************************************************************************
- * Copyright (c) 2015 Dirk Fauth.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ * Copyright (c) 2004, 2019 IBM Corporation and others.
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
- *     Eclipse - copy of the org.eclipse.ui.workbench implementation
- *     Dirk Fauth <dirk.fauth@googlemail.com> - removal of org.eclipse.ui dependencies
+ *     IBM Corporation - initial API and implementation
+ *     Yves YANG <yves.yang@soyatec.com> -
+ *     		Initial Fix for Bug 138078 [Preferences] Preferences Store for i18n support
+ *     Dirk Fauth <dirk.fauth@googlemail.com> - removed dependency to org.eclipse.ui
  *******************************************************************************/
 package org.fipro.e4.service.preferences.impl;
 
 import java.io.IOException;
+import java.util.Objects;
 
 import org.eclipse.core.commands.common.EventManager;
 import org.eclipse.core.runtime.Assert;
@@ -22,7 +28,6 @@ import org.eclipse.core.runtime.preferences.DefaultScope;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences.INodeChangeListener;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences.NodeChangeEvent;
-import org.eclipse.core.runtime.preferences.IEclipsePreferences.PreferenceChangeEvent;
 import org.eclipse.core.runtime.preferences.IScopeContext;
 import org.eclipse.jface.preference.IPersistentPreferenceStore;
 import org.eclipse.jface.preference.IPreferenceStore;
@@ -43,17 +48,16 @@ import org.osgi.service.prefs.BackingStoreException;
  * The default scope is always included in the search scopes when searching for
  * preference values.
  * </p>
- * 
+ *
  * @see org.eclipse.core.runtime.preferences
  * @since 3.1
  */
-public class ScopedPreferenceStore extends EventManager implements
-		IPreferenceStore, IPersistentPreferenceStore {
+public class ScopedPreferenceStore extends EventManager implements IPreferenceStore, IPersistentPreferenceStore {
 
 	/**
-	 * The storeContext is the context where values will stored with the
-	 * setValue methods. If there are no searchContexts this will be the search
-	 * context. (along with the "default" context)
+	 * The storeContext is the context where values will stored with the setValue
+	 * methods. If there are no searchContexts this will be the search context.
+	 * (along with the "default" context)
 	 */
 	private IScopeContext storeContext;
 
@@ -69,14 +73,14 @@ public class ScopedPreferenceStore extends EventManager implements
 	protected boolean silentRunning = false;
 
 	/**
-	 * The listener on the IEclipsePreferences. This is used to forward updates
-	 * to the property change listeners on the preference store.
+	 * The listener on the IEclipsePreferences. This is used to forward updates to
+	 * the property change listeners on the preference store.
 	 */
 	IEclipsePreferences.IPreferenceChangeListener preferencesListener;
 
 	/**
-	 * The default context is the context where getDefault and setDefault
-	 * methods will search. This context is also used in the search.
+	 * The default context is the context where getDefault and setDefault methods
+	 * will search. This context is also used in the search.
 	 */
 	private IScopeContext defaultContext = DefaultScope.INSTANCE;
 
@@ -91,8 +95,7 @@ public class ScopedPreferenceStore extends EventManager implements
 	String defaultQualifier;
 
 	/**
-	 * Boolean value indicating whether or not this store has changes to be
-	 * saved.
+	 * Boolean value indicating whether or not this store has changes to be saved.
 	 */
 	private boolean dirty;
 
@@ -100,16 +103,12 @@ public class ScopedPreferenceStore extends EventManager implements
 	 * Create a new instance of the receiver. Store the values in context in the
 	 * node looked up by qualifier. <strong>NOTE:</strong> Any instance of
 	 * ScopedPreferenceStore should call
-	 * 
-	 * @param context
-	 *            the scope to store to
-	 * @param qualifier
-	 *            the qualifier used to look up the preference node
-	 * @param defaultQualifierPath
-	 *            the qualifier used when looking up the defaults
+	 *
+	 * @param context              the scope to store to
+	 * @param qualifier            the qualifier used to look up the preference node
+	 * @param defaultQualifierPath the qualifier used when looking up the defaults
 	 */
-	public ScopedPreferenceStore(IScopeContext context, String qualifier,
-			String defaultQualifierPath) {
+	public ScopedPreferenceStore(IScopeContext context, String qualifier, String defaultQualifierPath) {
 		this(context, qualifier);
 		this.defaultQualifier = defaultQualifierPath;
 	}
@@ -117,48 +116,33 @@ public class ScopedPreferenceStore extends EventManager implements
 	/**
 	 * Create a new instance of the receiver. Store the values in context in the
 	 * node looked up by qualifier.
-	 * 
-	 * @param context
-	 *            the scope to store to
-	 * @param qualifier
-	 *            the qualifer used to look up the preference node
+	 *
+	 * @param context   the scope to store to
+	 * @param qualifier the qualifer used to look up the preference node
 	 */
 	public ScopedPreferenceStore(IScopeContext context, String qualifier) {
 		storeContext = context;
 		this.nodeQualifier = qualifier;
 		this.defaultQualifier = qualifier;
 
-		((IEclipsePreferences) getStorePreferences().parent())
-				.addNodeChangeListener(getNodeChangeListener());
+		((IEclipsePreferences) getStorePreferences().parent()).addNodeChangeListener(getNodeChangeListener());
 	}
 
 	/**
 	 * Return a node change listener that adds a removes the receiver when nodes
 	 * change.
-	 * 
+	 *
 	 * @return INodeChangeListener
 	 */
 	private INodeChangeListener getNodeChangeListener() {
 		return new IEclipsePreferences.INodeChangeListener() {
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.core.runtime.preferences.IEclipsePreferences.INodeChangeListener#added(org.eclipse.core.runtime.preferences.IEclipsePreferences.NodeChangeEvent)
-			 */
 			@Override
 			public void added(NodeChangeEvent event) {
-				if (nodeQualifier.equals(event.getChild().name())
-						&& isListenerAttached()) {
-					getStorePreferences().addPreferenceChangeListener(
-							preferencesListener);
+				if (nodeQualifier.equals(event.getChild().name()) && isListenerAttached()) {
+					getStorePreferences().addPreferenceChangeListener(preferencesListener);
 				}
 			}
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.core.runtime.preferences.IEclipsePreferences.INodeChangeListener#removed(org.eclipse.core.runtime.preferences.IEclipsePreferences.NodeChangeEvent)
-			 */
 			@Override
 			public void removed(NodeChangeEvent event) {
 				// Do nothing as there are no events from removed node
@@ -171,46 +155,35 @@ public class ScopedPreferenceStore extends EventManager implements
 	 */
 	private void initializePreferencesListener() {
 		if (preferencesListener == null) {
-			preferencesListener = new IEclipsePreferences.IPreferenceChangeListener() {
-				/*
-				 * (non-Javadoc)
-				 * 
-				 * @see org.eclipse.core.runtime.preferences.IEclipsePreferences.IPreferenceChangeListener#preferenceChange(org.eclipse.core.runtime.preferences.IEclipsePreferences.PreferenceChangeEvent)
-				 */
-				@Override
-				public void preferenceChange(PreferenceChangeEvent event) {
+			preferencesListener = event -> {
 
-					if (silentRunning) {
-						return;
-					}
-
-					Object oldValue = event.getOldValue();
-					Object newValue = event.getNewValue();
-					String key = event.getKey();
-					if (newValue == null) {
-						newValue = getDefault(key, oldValue);
-					} else if (oldValue == null) {
-						oldValue = getDefault(key, newValue);
-					}
-					firePropertyChangeEvent(event.getKey(), oldValue, newValue);
+				if (silentRunning) {
+					return;
 				}
+
+				Object oldValue = event.getOldValue();
+				Object newValue = event.getNewValue();
+				String key = event.getKey();
+				if (newValue == null) {
+					newValue = getDefault(key, oldValue);
+				} else if (oldValue == null) {
+					oldValue = getDefault(key, newValue);
+				}
+				firePropertyChangeEvent(event.getKey(), oldValue, newValue);
 			};
-			getStorePreferences().addPreferenceChangeListener(
-					preferencesListener);
+			getStorePreferences().addPreferenceChangeListener(preferencesListener);
 		}
 
 	}
 
 	/**
-	 * Does its best at determining the default value for the given key. Checks
-	 * the given object's type and then looks in the list of defaults to see if
-	 * a value exists. If not or if there is a problem converting the value, the
-	 * default default value for that type is returned.
-	 * 
-	 * @param key
-	 *            the key to search
-	 * @param obj
-	 *            the object who default we are looking for
+	 * Does its best at determining the default value for the given key. Checks the
+	 * given object's type and then looks in the list of defaults to see if a value
+	 * exists. If not or if there is a problem converting the value, the default
+	 * default value for that type is returned.
+	 *
+	 * @param key the key to search
+	 * @param obj the object who default we are looking for
 	 * @return Object or <code>null</code>
 	 */
 	Object getDefault(String key, Object obj) {
@@ -218,16 +191,15 @@ public class ScopedPreferenceStore extends EventManager implements
 		if (obj instanceof String) {
 			return defaults.get(key, STRING_DEFAULT_DEFAULT);
 		} else if (obj instanceof Integer) {
-			return new Integer(defaults.getInt(key, INT_DEFAULT_DEFAULT));
+			return Integer.valueOf(defaults.getInt(key, INT_DEFAULT_DEFAULT));
 		} else if (obj instanceof Double) {
-			return new Double(defaults.getDouble(key, DOUBLE_DEFAULT_DEFAULT));
+			return Double.valueOf(defaults.getDouble(key, DOUBLE_DEFAULT_DEFAULT));
 		} else if (obj instanceof Float) {
-			return new Float(defaults.getFloat(key, FLOAT_DEFAULT_DEFAULT));
+			return Float.valueOf(defaults.getFloat(key, FLOAT_DEFAULT_DEFAULT));
 		} else if (obj instanceof Long) {
-			return new Long(defaults.getLong(key, LONG_DEFAULT_DEFAULT));
+			return Long.valueOf(defaults.getLong(key, LONG_DEFAULT_DEFAULT));
 		} else if (obj instanceof Boolean) {
-			return defaults.getBoolean(key, BOOLEAN_DEFAULT_DEFAULT) ? Boolean.TRUE
-					: Boolean.FALSE;
+			return defaults.getBoolean(key, BOOLEAN_DEFAULT_DEFAULT) ? Boolean.TRUE : Boolean.FALSE;
 		} else {
 			return null;
 		}
@@ -235,7 +207,7 @@ public class ScopedPreferenceStore extends EventManager implements
 
 	/**
 	 * Return the IEclipsePreferences node associated with this store.
-	 * 
+	 *
 	 * @return the preference node for this store
 	 */
 	IEclipsePreferences getStorePreferences() {
@@ -244,18 +216,13 @@ public class ScopedPreferenceStore extends EventManager implements
 
 	/**
 	 * Return the default IEclipsePreferences for this store.
-	 * 
+	 *
 	 * @return this store's default preference node
 	 */
 	private IEclipsePreferences getDefaultPreferences() {
 		return defaultContext.getNode(defaultQualifier);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#addPropertyChangeListener(org.eclipse.jface.util.IPropertyChangeListener)
-	 */
 	@Override
 	public void addPropertyChangeListener(IPropertyChangeListener listener) {
 		initializePreferencesListener();// Create the preferences listener if it
@@ -265,16 +232,15 @@ public class ScopedPreferenceStore extends EventManager implements
 
 	/**
 	 * Return the preference path to search preferences on. This is the list of
-	 * preference nodes based on the scope contexts for this store. If there are
-	 * no search contexts set, then return this store's context.
+	 * preference nodes based on the scope contexts for this store. If there are no
+	 * search contexts set, then return this store's context.
 	 * <p>
-	 * Whether or not the default context should be included in the resulting
-	 * list is specified by the <code>includeDefault</code> parameter.
+	 * Whether or not the default context should be included in the resulting list
+	 * is specified by the <code>includeDefault</code> parameter.
 	 * </p>
-	 * 
-	 * @param includeDefault
-	 *            <code>true</code> if the default context should be included
-	 *            and <code>false</code> otherwise
+	 *
+	 * @param includeDefault <code>true</code> if the default context should be
+	 *                       included and <code>false</code> otherwise
 	 * @return IEclipsePreferences[]
 	 * @since 3.4 public, was added in 3.1 as private method
 	 */
@@ -283,8 +249,7 @@ public class ScopedPreferenceStore extends EventManager implements
 		// this store was created on. (and optionally the default)
 		if (searchContexts == null) {
 			if (includeDefault) {
-				return new IEclipsePreferences[] { getStorePreferences(),
-						getDefaultPreferences() };
+				return new IEclipsePreferences[] { getStorePreferences(), getDefaultPreferences() };
 			}
 			return new IEclipsePreferences[] { getStorePreferences() };
 		}
@@ -305,22 +270,21 @@ public class ScopedPreferenceStore extends EventManager implements
 	}
 
 	/**
-	 * Set the search contexts to scopes. When searching for a value the seach
-	 * will be done in the order of scope contexts and will not search the
-	 * storeContext unless it is in this list.
+	 * Set the search contexts to scopes. When searching for a value the seach will
+	 * be done in the order of scope contexts and will not search the storeContext
+	 * unless it is in this list.
 	 * <p>
 	 * If the given list is <code>null</code>, then clear this store's search
-	 * contexts. This means that only this store's scope context and default
-	 * scope will be used during preference value searching.
+	 * contexts. This means that only this store's scope context and default scope
+	 * will be used during preference value searching.
 	 * </p>
 	 * <p>
-	 * The defaultContext will be added to the end of this list automatically
-	 * and <em>MUST NOT</em> be included by the user.
+	 * The defaultContext will be added to the end of this list automatically and
+	 * <em>MUST NOT</em> be included by the user.
 	 * </p>
-	 * 
-	 * @param scopes
-	 *            a list of scope contexts to use when searching, or
-	 *            <code>null</code>
+	 *
+	 * @param scopes a list of scope contexts to use when searching, or
+	 *               <code>null</code>
 	 */
 	public void setSearchContexts(IScopeContext[] scopes) {
 		this.searchContexts = scopes;
@@ -330,135 +294,77 @@ public class ScopedPreferenceStore extends EventManager implements
 
 		// Assert that the default was not included (we automatically add it to
 		// the end)
-		for (int i = 0; i < scopes.length; i++) {
-			if (scopes[i].equals(defaultContext)) {
-				// TODO localize
+		for (IScopeContext scope : scopes) {
+			if (scope.equals(defaultContext)) {
 				Assert.isTrue(false, "Do not add the default to the search contexts");
 			}
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#contains(java.lang.String)
-	 */
 	@Override
 	public boolean contains(String name) {
 		if (name == null) {
 			return false;
 		}
-		return (Platform.getPreferencesService().get(name, null,
-				getPreferenceNodes(true))) != null;
+		return (Platform.getPreferencesService().get(name, null, getPreferenceNodes(true))) != null;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#firePropertyChangeEvent(java.lang.String,
-	 *      java.lang.Object, java.lang.Object)
-	 */
 	@Override
-	public void firePropertyChangeEvent(String name, Object oldValue,
-			Object newValue) {
+	public void firePropertyChangeEvent(String name, Object oldValue, Object newValue) {
 		// important: create intermediate array to protect against listeners
 		// being added/removed during the notification
-		final Object[] list = getListeners();
-		if (list.length == 0) {
+		final Object[] listeners = getListeners();
+		if (listeners.length == 0) {
 			return;
 		}
-		final PropertyChangeEvent event = new PropertyChangeEvent(this, name,
-				oldValue, newValue);
-		for (int i = 0; i < list.length; i++) {
-			final IPropertyChangeListener listener = (IPropertyChangeListener) list[i];
-			SafeRunner.run(new SafeRunnable(JFaceResources
-					.getString("PreferenceStore.changeError")) { //$NON-NLS-1$
-						@Override
-						public void run() {
-							listener.propertyChange(event);
-						}
-					});
+		final PropertyChangeEvent event = new PropertyChangeEvent(this, name, oldValue, newValue);
+		for (Object listener : listeners) {
+			final IPropertyChangeListener propertyChangeListener = (IPropertyChangeListener) listener;
+			SafeRunner.run(new SafeRunnable(JFaceResources.getString("PreferenceStore.changeError")) { //$NON-NLS-1$
+				@Override
+				public void run() {
+					propertyChangeListener.propertyChange(event);
+				}
+			});
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getBoolean(java.lang.String)
-	 */
 	@Override
 	public boolean getBoolean(String name) {
 		String value = internalGet(name);
-		return value == null ? BOOLEAN_DEFAULT_DEFAULT : Boolean.valueOf(value)
-				.booleanValue();
+		return value == null ? BOOLEAN_DEFAULT_DEFAULT : Boolean.valueOf(value).booleanValue();
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getDefaultBoolean(java.lang.String)
-	 */
 	@Override
 	public boolean getDefaultBoolean(String name) {
-		return getDefaultPreferences()
-				.getBoolean(name, BOOLEAN_DEFAULT_DEFAULT);
+		return getDefaultPreferences().getBoolean(name, BOOLEAN_DEFAULT_DEFAULT);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getDefaultDouble(java.lang.String)
-	 */
 	@Override
 	public double getDefaultDouble(String name) {
 		return getDefaultPreferences().getDouble(name, DOUBLE_DEFAULT_DEFAULT);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getDefaultFloat(java.lang.String)
-	 */
 	@Override
 	public float getDefaultFloat(String name) {
 		return getDefaultPreferences().getFloat(name, FLOAT_DEFAULT_DEFAULT);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getDefaultInt(java.lang.String)
-	 */
 	@Override
 	public int getDefaultInt(String name) {
 		return getDefaultPreferences().getInt(name, INT_DEFAULT_DEFAULT);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getDefaultLong(java.lang.String)
-	 */
 	@Override
 	public long getDefaultLong(String name) {
 		return getDefaultPreferences().getLong(name, LONG_DEFAULT_DEFAULT);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getDefaultString(java.lang.String)
-	 */
 	@Override
 	public String getDefaultString(String name) {
 		return getDefaultPreferences().get(name, STRING_DEFAULT_DEFAULT);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getDouble(java.lang.String)
-	 */
 	@Override
 	public double getDouble(String name) {
 		String value = internalGet(name);
@@ -473,24 +379,17 @@ public class ScopedPreferenceStore extends EventManager implements
 	}
 
 	/**
-	 * Return the string value for the specified key. Look in the nodes which
-	 * are specified by this object's list of search scopes. If the value does
-	 * not exist then return <code>null</code>.
-	 * 
-	 * @param key
-	 *            the key to search with
+	 * Return the string value for the specified key. Look in the nodes which are
+	 * specified by this object's list of search scopes. If the value does not exist
+	 * then return <code>null</code>.
+	 *
+	 * @param key the key to search with
 	 * @return String or <code>null</code> if the value does not exist.
 	 */
 	private String internalGet(String key) {
-		return Platform.getPreferencesService().get(key, null,
-				getPreferenceNodes(true));
+		return Platform.getPreferencesService().get(key, null, getPreferenceNodes(true));
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getFloat(java.lang.String)
-	 */
 	@Override
 	public float getFloat(String name) {
 		String value = internalGet(name);
@@ -504,11 +403,6 @@ public class ScopedPreferenceStore extends EventManager implements
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getInt(java.lang.String)
-	 */
 	@Override
 	public int getInt(String name) {
 		String value = internalGet(name);
@@ -522,11 +416,6 @@ public class ScopedPreferenceStore extends EventManager implements
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getLong(java.lang.String)
-	 */
 	@Override
 	public long getLong(String name) {
 		String value = internalGet(name);
@@ -540,47 +429,25 @@ public class ScopedPreferenceStore extends EventManager implements
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#getString(java.lang.String)
-	 */
 	@Override
 	public String getString(String name) {
 		String value = internalGet(name);
 		return value == null ? STRING_DEFAULT_DEFAULT : value;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#isDefault(java.lang.String)
-	 */
 	@Override
 	public boolean isDefault(String name) {
 		if (name == null) {
 			return false;
 		}
-		return (Platform.getPreferencesService().get(name, null,
-				getPreferenceNodes(false))) == null;
+		return (Platform.getPreferencesService().get(name, null, getPreferenceNodes(false))) == null;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#needsSaving()
-	 */
 	@Override
 	public boolean needsSaving() {
 		return dirty;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#putValue(java.lang.String,
-	 *      java.lang.String)
-	 */
 	@Override
 	public void putValue(String name, String value) {
 		try {
@@ -594,11 +461,6 @@ public class ScopedPreferenceStore extends EventManager implements
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#removePropertyChangeListener(org.eclipse.jface.util.IPropertyChangeListener)
-	 */
 	@Override
 	public void removePropertyChangeListener(IPropertyChangeListener listener) {
 		removeListenerObject(listener);
@@ -607,77 +469,36 @@ public class ScopedPreferenceStore extends EventManager implements
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setDefault(java.lang.String,
-	 *      double)
-	 */
 	@Override
 	public void setDefault(String name, double value) {
 		getDefaultPreferences().putDouble(name, value);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setDefault(java.lang.String,
-	 *      float)
-	 */
 	@Override
 	public void setDefault(String name, float value) {
 		getDefaultPreferences().putFloat(name, value);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setDefault(java.lang.String,
-	 *      int)
-	 */
 	@Override
 	public void setDefault(String name, int value) {
 		getDefaultPreferences().putInt(name, value);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setDefault(java.lang.String,
-	 *      long)
-	 */
 	@Override
 	public void setDefault(String name, long value) {
 		getDefaultPreferences().putLong(name, value);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setDefault(java.lang.String,
-	 *      java.lang.String)
-	 */
 	@Override
 	public void setDefault(String name, String defaultObject) {
 		getDefaultPreferences().put(name, defaultObject);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setDefault(java.lang.String,
-	 *      boolean)
-	 */
 	@Override
 	public void setDefault(String name, boolean value) {
 		getDefaultPreferences().putBoolean(name, value);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setToDefault(java.lang.String)
-	 */
 	@Override
 	public void setToDefault(String name) {
 
@@ -688,23 +509,17 @@ public class ScopedPreferenceStore extends EventManager implements
 			// removing a non-existing preference is a no-op so call the Core
 			// API directly
 			getStorePreferences().remove(name);
-			if (oldValue != defaultValue){
+			if (!Objects.equals(oldValue, defaultValue)) {
 				dirty = true;
 				firePropertyChangeEvent(name, oldValue, defaultValue);
 			}
-				
+
 		} finally {
 			silentRunning = false;// Restart listening to preferences
 		}
 
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setValue(java.lang.String,
-	 *      double)
-	 */
 	@Override
 	public void setValue(String name, double value) {
 		double oldValue = getDouble(name);
@@ -719,19 +534,12 @@ public class ScopedPreferenceStore extends EventManager implements
 				getStorePreferences().putDouble(name, value);
 			}
 			dirty = true;
-			firePropertyChangeEvent(name, new Double(oldValue), new Double(
-					value));
+			firePropertyChangeEvent(name, Double.valueOf(oldValue), Double.valueOf(value));
 		} finally {
 			silentRunning = false;// Restart listening to preferences
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setValue(java.lang.String,
-	 *      float)
-	 */
 	@Override
 	public void setValue(String name, float value) {
 		float oldValue = getFloat(name);
@@ -746,18 +554,12 @@ public class ScopedPreferenceStore extends EventManager implements
 				getStorePreferences().putFloat(name, value);
 			}
 			dirty = true;
-			firePropertyChangeEvent(name, new Float(oldValue), new Float(value));
+			firePropertyChangeEvent(name, Float.valueOf(oldValue), Float.valueOf(value));
 		} finally {
 			silentRunning = false;// Restart listening to preferences
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setValue(java.lang.String,
-	 *      int)
-	 */
 	@Override
 	public void setValue(String name, int value) {
 		int oldValue = getInt(name);
@@ -772,19 +574,12 @@ public class ScopedPreferenceStore extends EventManager implements
 				getStorePreferences().putInt(name, value);
 			}
 			dirty = true;
-			firePropertyChangeEvent(name, new Integer(oldValue), new Integer(
-					value));
+			firePropertyChangeEvent(name, Integer.valueOf(oldValue), Integer.valueOf(value));
 		} finally {
 			silentRunning = false;// Restart listening to preferences
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setValue(java.lang.String,
-	 *      long)
-	 */
 	@Override
 	public void setValue(String name, long value) {
 		long oldValue = getLong(name);
@@ -799,18 +594,12 @@ public class ScopedPreferenceStore extends EventManager implements
 				getStorePreferences().putLong(name, value);
 			}
 			dirty = true;
-			firePropertyChangeEvent(name, new Long(oldValue), new Long(value));
+			firePropertyChangeEvent(name, Long.valueOf(oldValue), Long.valueOf(value));
 		} finally {
 			silentRunning = false;// Restart listening to preferences
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setValue(java.lang.String,
-	 *      java.lang.String)
-	 */
 	@Override
 	public void setValue(String name, String value) {
 		// Do not turn on silent running here as Strings are propagated
@@ -822,12 +611,6 @@ public class ScopedPreferenceStore extends EventManager implements
 		dirty = true;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPreferenceStore#setValue(java.lang.String,
-	 *      boolean)
-	 */
 	@Override
 	public void setValue(String name, boolean value) {
 		boolean oldValue = getBoolean(name);
@@ -842,18 +625,13 @@ public class ScopedPreferenceStore extends EventManager implements
 				getStorePreferences().putBoolean(name, value);
 			}
 			dirty = true;
-			firePropertyChangeEvent(name, oldValue ? Boolean.TRUE
-					: Boolean.FALSE, value ? Boolean.TRUE : Boolean.FALSE);
+			firePropertyChangeEvent(name, oldValue ? Boolean.TRUE : Boolean.FALSE,
+					value ? Boolean.TRUE : Boolean.FALSE);
 		} finally {
 			silentRunning = false;// Restart listening to preferences
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.preference.IPersistentPreferenceStore#save()
-	 */
 	@Override
 	public void save() throws IOException {
 		try {
@@ -870,9 +648,8 @@ public class ScopedPreferenceStore extends EventManager implements
 	 */
 	private void disposePreferenceStoreListener() {
 
-		IEclipsePreferences root = (IEclipsePreferences) Platform
-				.getPreferencesService().getRootNode().node(
-						Plugin.PLUGIN_PREFERENCE_SCOPE);
+		IEclipsePreferences root = (IEclipsePreferences) Platform.getPreferencesService().getRootNode()
+				.node(Plugin.PLUGIN_PREFERENCE_SCOPE);
 		try {
 			if (!(root.nodeExists(nodeQualifier))) {
 				return;
